2009-08-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=19360
        Frags on current page don't generate "navigation-requested" events

        Fix order of parameters for the creation of SubstituteData object,
        so that normal data loads do not have an unreachable URL. Also
        remove a confusion about the purpose of the last parameter.

        * webkit/webkitwebframe.cpp:
        (webkit_web_frame_load_data):

Canonical link: https://commits.webkit.org/39051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47457 268f45cc-cd09-0410-ab3c-d52691b4dbfc